API returns ip_type now

--- a/tests/integration/targets/firewall_rule/tasks/rule_absent.yml
+++ b/tests/integration/targets/firewall_rule/tasks/rule_absent.yml
@@ -23,8 +23,7 @@
       - result.vultr_firewall_rule.port == "{{ rule.port | default('') }}"
       - result.vultr_firewall_rule.subnet == "{{ rule.subnet | default('') }}"
       - result.vultr_firewall_rule.subnet_size == {{ rule.subnet_size | default(0) }}
-      # API missmatch ip_type -> type
-      - result.vultr_firewall_rule.type == "{{ rule.ip_type | default('v4') }}"
+      - result.vultr_firewall_rule.ip_type == "{{ rule.ip_type | default('v4') }}"
 
 - name: test absent firewall rule
   vultr.cloud.firewall_rule:
@@ -45,8 +44,7 @@
       - result.vultr_firewall_rule.port == "{{ rule.port | default('') }}"
       - result.vultr_firewall_rule.subnet == "{{ rule.subnet | default('') }}"
       - result.vultr_firewall_rule.subnet_size == {{ rule.subnet_size | default(0) }}
-      # API missmatch ip_type -> type
-      - result.vultr_firewall_rule.type == "{{ rule.ip_type | default('v4') }}"
+      - result.vultr_firewall_rule.ip_type == "{{ rule.ip_type | default('v4') }}"
 
 - name: test absent firewall rule idempotence
   vultr.cloud.firewall_rule:
