--- a/tests/integration/targets/dns_record/tasks/tests.yml
+++ b/tests/integration/targets/dns_record/tasks/tests.yml
@@ -2,11 +2,11 @@
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
 - name: setup dns domain
-  dns_domain:
+  vultr.cloud.dns_domain:
     name: "{{ vultr_dns_domain_name }}"
     server_ip: 10.10.10.10
 
-- include_tasks: test_fail_multiple.yml
+- ansible.builtin.import_tasks: test_fail_multiple.yml
 
-- include_tasks: record.yml
+- ansible.builtin.include_tasks: record.yml
   with_items: "{{ vultr_dns_record_items }}"
