--- a/tests/integration/targets/ssh_key_info/tasks/tests.yml
+++ b/tests/integration/targets/ssh_key_info/tasks/tests.yml
@@ -7,7 +7,7 @@
   register: result
 
 - name: verify test get vultr ssh key infos in check mode
-  assert:
+  ansible.builtin.assert:
     that:
       - result.vultr_ssh_key_info|selectattr('name','equalto','{{ ssh_key_name }}') | list | count == 0
       - result.vultr_ssh_key_info|selectattr('ssh_key','equalto','{{ ssh_key_content }}') | list | count == 0
@@ -23,7 +23,7 @@
   register: result
 
 - name: verify test get vultr ssh key infos in check mode
-  assert:
+  ansible.builtin.assert:
     that:
       - result.vultr_ssh_key_info|selectattr('name','equalto','{{ ssh_key_name }}') | list | count == 1
       - result.vultr_ssh_key_info|selectattr('ssh_key','equalto','{{ ssh_key_content }}') | list | count == 1
@@ -33,7 +33,7 @@
   register: result
 
 - name: verify test get vultr ssh key infos
-  assert:
+  ansible.builtin.assert:
     that:
       - result.vultr_ssh_key_info|selectattr('name','equalto','{{ ssh_key_name }}') | list | count == 1
       - result.vultr_ssh_key_info|selectattr('ssh_key','equalto','{{ ssh_key_content }}') | list | count == 1
