--- a/tests/integration/targets/block_storage/tasks/main.yml
+++ b/tests/integration/targets/block_storage/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
 - block:
-      - import_tasks: failures.yml
-      - import_tasks: tests.yml
-      # TODO: to uncomment, replace the server instance task with a v2
-      # - import_tasks: tests_attach_to_server.yml
+        - ansible.builtin.import_tasks: failures.yml
+        - ansible.builtin.import_tasks: tests.yml
+        # TODO: to uncomment, replace the server instance task with a v2
+        # - ansible.builtin.import_tasks: tests_attach_to_server.yml
   always:
-      - import_role:
-            name: cleanup
-            tasks_from: cleanup_instance
-      - import_role:
-            name: cleanup
-            tasks_from: cleanup_ssh_key
-      - import_role:
-            name: cleanup
-            tasks_from: cleanup_block_storage
+        - ansible.builtin.import_role:
+                name: cleanup
+                tasks_from: cleanup_instance
+        - ansible.builtin.import_role:
+                name: cleanup
+                tasks_from: cleanup_ssh_key
+        - ansible.builtin.import_role:
+                name: cleanup
+                tasks_from: cleanup_block_storage
