--- a/tests/integration/targets/cleanup/tasks/cleanup_dns_domain.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_dns_domain.yml
@@ -1,6 +1,6 @@
 ---
 - name: List dns domains
-  uri:
+  ansible.builtin.uri:
     url: "{{ vultr_api_url }}/domains"
     headers:
       Authorization: Bearer {{ vultr_api_key }}
@@ -9,11 +9,11 @@
   no_log: true
 
 - name: Found resources
-  debug:
+  ansible.builtin.debug:
     var: res.json
 
 - name: Remove all dns domains created by this test run
-  uri:
+  ansible.builtin.uri:
     url: "{{ vultr_api_url }}/domains/{{ item.domain }}"
     method: "DELETE"
     headers:
