--- a/tests/integration/targets/cleanup/tasks/cleanup_firewall_group.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_firewall_group.yml
@@ -1,6 +1,6 @@
 ---
 - name: List firewall groups
-  uri:
+  ansible.builtin.uri:
     url: "{{ vultr_api_url }}/firewalls"
     headers:
       Authorization: Bearer {{ vultr_api_key }}
@@ -9,11 +9,11 @@
   no_log: true
 
 - name: Found resources
-  debug:
+  ansible.builtin.debug:
     var: res.json
 
 - name: Remove all firewall groups created by this test run
-  uri:
+  ansible.builtin.uri:
     url: "{{ vultr_api_url }}/firewalls/{{ item.id }}"
     method: "DELETE"
     headers:
