--- a/tests/integration/targets/cleanup/tasks/cleanup_reserved_ip.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_reserved_ip.yml
@@ -1,6 +1,6 @@
 ---
 - name: List reserved-ips
-  uri:
+  ansible.builtin.uri:
     url: "{{ vultr_api_url }}/reserved-ips"
     headers:
       Authorization: Bearer {{ vultr_api_key }}
@@ -9,11 +9,11 @@
   no_log: true
 
 - name: Found resources
-  debug:
+  ansible.builtin.debug:
     var: res.json
 
 - name: Remove all reserved-ips created by this test run
-  uri:
+  ansible.builtin.uri:
     url: "{{ vultr_api_url }}/reserved-ips/{{ item.id }}"
     method: "DELETE"
     headers:
