--- a/tests/integration/targets/cleanup/tasks/cleanup_ssh_key.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_ssh_key.yml
@@ -1,6 +1,6 @@
 ---
 - name: List ssh-keys
-  uri:
+  ansible.builtin.uri:
     url: "{{ vultr_api_url }}/ssh-keys"
     headers:
       Authorization: Bearer {{ vultr_api_key }}
@@ -9,11 +9,11 @@
   no_log: true
 
 - name: Found resources
-  debug:
+  ansible.builtin.debug:
     var: res.json
 
 - name: Remove all ssh-keys created by this test run
-  uri:
+  ansible.builtin.uri:
     url: "{{ vultr_api_url }}/ssh-keys/{{ item.id }}"
     method: "DELETE"
     headers:
