--- a/tests/integration/targets/dns_record/tasks/record.yml
+++ b/tests/integration/targets/dns_record/tasks/record.yml
@@ -1,6 +1,6 @@
 # Copyright (c) 2021, René Moser <mail@renemoser.net>
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
-- include_tasks: create_record.yml
-- include_tasks: update_record.yml
-- include_tasks: remove_record.yml
+- ansible.builtin.import_tasks: create_record.yml
+- ansible.builtin.import_tasks: update_record.yml
+- ansible.builtin.import_tasks: remove_record.yml
