--- a/tests/integration/targets/dns_record/tasks/test_fail_multiple.yml
+++ b/tests/integration/targets/dns_record/tasks/test_fail_multiple.yml
@@ -2,43 +2,43 @@
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
 - name: setup first dns record
-  dns_record:
+  vultr.cloud.dns_record:
     name: test-multiple
     domain: "{{ vultr_dns_domain_name }}"
     data: 1.2.3.4
     multiple: true
   register: result
 - name: verify setup a dns record
-  assert:
+  ansible.builtin.assert:
     that:
       - result is successful
 
 - name: setup second dns record
-  dns_record:
+  vultr.cloud.dns_record:
     name: test-multiple
     domain: "{{ vultr_dns_domain_name }}"
     data: 1.2.3.5
     multiple: true
   register: result
 - name: verify setup second dns record
-  assert:
+  ansible.builtin.assert:
     that:
       - result is successful
 
 - name: test-multiple fail multiple identical records found
-  dns_record:
+  vultr.cloud.dns_record:
     name: test-multiple
     domain: "{{ vultr_dns_domain_name }}"
     state: absent
   register: result
   ignore_errors: true
 - name: verify test fail multiple identical records found
-  assert:
+  ansible.builtin.assert:
     that:
       - result is failed
 
 - name: test-multiple fail absent multiple identical records but not data
-  dns_record:
+  vultr.cloud.dns_record:
     name: test-multiple
     domain: "{{ vultr_dns_domain_name }}"
     state: absent
@@ -46,13 +46,13 @@
   register: result
   ignore_errors: true
 - name: verify test-multiple success absent multiple identical records found
-  assert:
+  ansible.builtin.assert:
     that:
       - result is failed
       - "result.msg == 'multiple is True but all of the following are missing: data'"
 
 - name: test-multiple success absent multiple identical records second found
-  dns_record:
+  vultr.cloud.dns_record:
     name: test-multiple
     domain: "{{ vultr_dns_domain_name }}"
     data: 1.2.3.5
@@ -60,12 +60,12 @@
     multiple: true
   register: result
 - name: verify test-multiple success absent multiple identical records second found
-  assert:
+  ansible.builtin.assert:
     that:
       - result is changed
 
 - name: test-multiple success absent multiple identical records first found
-  dns_record:
+  vultr.cloud.dns_record:
     name: test-multiple
     domain: "{{ vultr_dns_domain_name }}"
     data: 1.2.3.4
@@ -73,6 +73,6 @@
     multiple: true
   register: result
 - name: verify test-multiple success absent multiple identical records firstfound
-  assert:
+  ansible.builtin.assert:
     that:
       - result is changed
