--- a/tests/integration/targets/dns_record/tasks/update_record.yml
+++ b/tests/integration/targets/dns_record/tasks/update_record.yml
@@ -2,7 +2,7 @@
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 ---
 - name: test update or add another dns record in check mode
-  dns_record:
+  vultr.cloud.dns_record:
     name: "{{ item.name | default(omit) }}"
     domain: "{{ vultr_dns_domain_name }}"
     data: "{{ item.update_data | default(item.data) }}"
@@ -13,7 +13,7 @@
   check_mode: true
   register: result
 - name: verify test update or add another dns record in check mode
-  assert:
+  ansible.builtin.assert:
     that:
       - result is changed
       - result.vultr_dns_record.data == "{{ item.data }}"
@@ -23,14 +23,14 @@
       - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
   when: item.multiple is undefined or item.multiple == false
 - name: verify test add another dns record in check mode
-  assert:
+  ansible.builtin.assert:
     that:
       - result is changed
       - not result.vultr_dns_record
   when: item.multiple is defined and item.multiple == true
 
 - name: test update or add another dns record
-  dns_record:
+  vultr.cloud.dns_record:
     name: "{{ item.name | default(omit) }}"
     domain: "{{ vultr_dns_domain_name }}"
     data: "{{ item.update_data | default(item.data) }}"
@@ -40,7 +40,7 @@
     multiple: "{{ item.multiple | default(omit) }}"
   register: result
 - name: verify test update a dns record
-  assert:
+  ansible.builtin.assert:
     that:
       - result is changed
       - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
@@ -50,7 +50,7 @@
       - result.vultr_dns_record.priority == {{ item.update_priority | default(0) }}
 
 - name: test update or add another dns record idempotence
-  dns_record:
+  vultr.cloud.dns_record:
     name: "{{ item.name | default(omit) }}"
     domain: "{{ vultr_dns_domain_name }}"
     data: "{{ item.update_data | default(item.data) }}"
@@ -60,7 +60,7 @@
     multiple: "{{ item.multiple | default(omit) }}"
   register: result
 - name: verify test update a dns record idempotence
-  assert:
+  ansible.builtin.assert:
     that:
       - result is not changed
       - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
