--- a/tests/integration/targets/firewall_group/tasks/main.yml
+++ b/tests/integration/targets/firewall_group/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - block:
-    - import_tasks: tests.yml
+    - ansible.builtin.import_tasks: tests.yml
   always:
-    - import_role:
+    - ansible.builtin.import_role:
         name: cleanup
         tasks_from: cleanup_firewall_group
