--- a/tests/integration/targets/firewall_rule/tasks/rule_absent.yml
+++ b/tests/integration/targets/firewall_rule/tasks/rule_absent.yml
@@ -1,6 +1,6 @@
 ---
 - name: rule info
-  debug:
+  ansible.builtin.debug:
     var: rule
 
 - name: test absent firewall rule in check mode
@@ -15,7 +15,7 @@
   register: result
   check_mode: true
 - name: verify test absent firewall rule in check mode
-  assert:
+  ansible.builtin.assert:
     that:
       - result is changed
       - result.vultr_firewall_rule.action == "accept"
@@ -36,7 +36,7 @@
     state: absent
   register: result
 - name: verify test absent firewall rule
-  assert:
+  ansible.builtin.assert:
     that:
       - result is changed
       - result.vultr_firewall_rule.action == "accept"
@@ -57,6 +57,6 @@
     state: absent
   register: result
 - name: verify test absent firewall rule idempotence
-  assert:
+  ansible.builtin.assert:
     that:
       - result is not changed
