--- a/tests/integration/targets/reserved_ip/tasks/main.yml
+++ b/tests/integration/targets/reserved_ip/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - block:
-    - import_tasks: tests.yml
+    - ansible.builtin.import_tasks: tests.yml
   always:
-    - import_role:
+    - ansible.builtin.import_role:
         name: cleanup
         tasks_from: cleanup_reserved_ip
-    - import_role:
+    - ansible.builtin.import_role:
         name: cleanup
         tasks_from: cleanup_instance
