--- a/tests/integration/targets/startup_script_info/tasks/tests.yml
+++ b/tests/integration/targets/startup_script_info/tasks/tests.yml
@@ -16,7 +16,7 @@
   register: result
 
 - name: verify test gather vultr startup script info in check mode
-  assert:
+  ansible.builtin.assert:
     that:
       - result.vultr_startup_script_info|selectattr('name','equalto','{{ startup_script_name }}') | list | count == 1
 
@@ -25,7 +25,7 @@
   register: result
 
 - name: verify test gather vultr startup script info
-  assert:
+  ansible.builtin.assert:
     that:
       - result.vultr_startup_script_info|selectattr('name','equalto','{{ startup_script_name }}') | list | count == 1
 
