--- a/tests/integration/targets/user_info/tasks/tests.yml
+++ b/tests/integration/targets/user_info/tasks/tests.yml
@@ -15,7 +15,7 @@
   check_mode: true
 
 - name: verify test get vultr user info in check mode
-  assert:
+  ansible.builtin.assert:
     that:
       - result.vultr_user_info|selectattr('name','equalto','{{ user_name }}') | list | count == 1
 
@@ -24,7 +24,7 @@
   register: result
 
 - name: verify test get vultr user info
-  assert:
+  ansible.builtin.assert:
     that:
       - result.vultr_user_info|selectattr('name','equalto','{{ user_name }}') | list | count == 1
 
