ci: weekly integration

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,6 +11,8 @@ on:
       - ".github/workflows/integration.yml"
       - "plugins/**"
       - "tests/**"
+  schedule:
+    - cron: 56 3 * * * # Run weekly
 
 jobs:
   integration-test:
