--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,34 +16,54 @@ on:
 
 jobs:
   integration-test:
-    name: Integration test using Python ${{ matrix.python-version }}
+    name: Integration test using Python ${{ matrix.python }}
     if: ${{ github.event.label.name == 'automation' || github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ansible_collections/vultr/cloud
     strategy:
+      max-parallel: 1
       fail-fast: false
       matrix:
-        runner-python-version:
+        ansible:
+          - stable-2.10
+          - stable-2.11
+          - stable-2.12
+          - stable-2.13
+          - devel
+        python:
+          - 2.7 # required by Ansible see https://github.com/ansible-collections/overview/blob/main/collection_requirements.rst#python-compatibility
+          - 3.6 # required by Ansible see https://github.com/ansible-collections/overview/blob/main/collection_requirements.rst#python-compatibility
           - 3.8
-        python-version:
-          - 3.8
+        exclude:
+          - ansible: devel
+            python: 2.7
+          - ansible: devel
+            python: 3.6
+          - ansible: stable-2.12
+            python: 2.7
+          - ansible: stable-2.12
+            python: 3.6
+          - ansible: stable-2.13
+            python: 2.7
+          - ansible: stable-2.13
+            python: 3.6
     steps:
       - name: Check out code
         uses: actions/checkout@v2
         with:
           path: ansible_collections/vultr/cloud
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
 
-      - name: Install ansible and collection dependencies
+      - name: Install ansible-base (${{ matrix.ansible }})
         run: |
           python -m pip install --upgrade pip
-          pip install ansible
+          pip install https://github.com/ansible/ansible/archive/${{ matrix.ansible }}.tar.gz --disable-pip-version-check
 
       - name: Build and install collection
         run: |
@@ -56,15 +76,24 @@ jobs:
         run: |
           echo "$VULTR_CONFIG_FILE" > tests/integration/cloud-config-vultr.ini
 
+      - name: Ensure no other integration test is currently running
+        uses: softprops/turnstyle@v0.1.5
+        timeout-minutes: 60
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          same-branch-only: false
+
       - name: Run the tests
         run: >-
           ansible-test
           integration
           --docker
           -v
-          --diff
           --color
           --continue-on-error
+          --diff
+          --python ${{ matrix.python }}
           --coverage
           cloud/vultr/
 
