--- a/tests/integration/targets/cleanup/tasks/cleanup_user.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_user.yml
@@ -1,26 +1,29 @@
 ---
-- name: List users
-  ansible.builtin.uri:
-    url: "{{ vultr_api_url }}/users"
-    headers:
-      Authorization: Bearer {{ vultr_api_key }}
-    status_code: 200
-  register: res
-  no_log: true
+- name: cleanup
+  when: vultr_api_key
+  block:
+    - name: List users
+      ansible.builtin.uri:
+        url: "{{ vultr_api_url }}/users"
+        headers:
+          Authorization: Bearer {{ vultr_api_key }}
+        status_code: 200
+      register: res
+      no_log: true
 
-- name: Found resources
-  ansible.builtin.debug:
-    var: res.json
+    - name: Found resources
+      ansible.builtin.debug:
+        var: res.json
 
-- name: Remove all users created by this test run
-  ansible.builtin.uri:
-    url: "{{ vultr_api_url }}/users/{{ item.id }}"
-    method: "DELETE"
-    headers:
-      Authorization: Bearer {{ vultr_api_key }}
-    status_code: 204
-  when: vultr_resource_prefix in item.name
-  with_items: "{{ res.json.users }}"
-  loop_control:
-    label: "{{ item.name }}"
-  no_log: true
+    - name: Remove all users created by this test run
+      ansible.builtin.uri:
+        url: "{{ vultr_api_url }}/users/{{ item.id }}"
+        method: "DELETE"
+        headers:
+          Authorization: Bearer {{ vultr_api_key }}
+        status_code: 204
+      when: vultr_resource_prefix in item.name
+      with_items: "{{ res.json.users }}"
+      loop_control:
+        label: "{{ item.name }}"
+      no_log: true
