--- a/tests/integration/targets/cleanup/tasks/cleanup_vpc.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_vpc.yml
@@ -1,25 +1,28 @@
 ---
-- name: List vpcs
-  ansible.builtin.uri:
-    url: "{{ vultr_api_url }}/vpcs"
-    headers:
-      Authorization: Bearer {{ vultr_api_key }}
-    status_code: 200
-  register: res
-  no_log: true
+- name: cleanup
+  when: vultr_api_key
+  block:
+    - name: List vpcs
+      ansible.builtin.uri:
+        url: "{{ vultr_api_url }}/vpcs"
+        headers:
+          Authorization: Bearer {{ vultr_api_key }}
+        status_code: 200
+      register: res
+      no_log: true
 
-- name: Found resources
-  ansible.builtin.debug:
-    var: res.json
+    - name: Found resources
+      ansible.builtin.debug:
+        var: res.json
 
-- name: Remove all vpcs created by this test run
-  ansible.builtin.uri:
-    url: "{{ vultr_api_url }}/vpcs/{{ item.id }}"
-    method: "DELETE"
-    headers:
-      Authorization: Bearer {{ vultr_api_key }}
-    status_code: 204
-  when: vultr_resource_prefix in item.description
-  with_items: "{{ res.json.vpcs }}"
-  loop_control:
-    label: "{{ item.description }}"
+    - name: Remove all vpcs created by this test run
+      ansible.builtin.uri:
+        url: "{{ vultr_api_url }}/vpcs/{{ item.id }}"
+        method: "DELETE"
+        headers:
+          Authorization: Bearer {{ vultr_api_key }}
+        status_code: 204
+      when: vultr_resource_prefix in item.description
+      with_items: "{{ res.json.vpcs }}"
+      loop_control:
+        label: "{{ item.description }}"
